Fix flexbox spacing

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -15,7 +15,7 @@ img {
 }
 .plants{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   gap: 52px;
 }
 .barberry,
@@ -29,6 +29,7 @@ img {
 }
 .text{
   text-align: center;
+  margin-top: 5px;
 }
 /* do not edit this footer */
 .footer {
